Add an alt attribut to the image to make it HTML5 validated.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
 	<header>
-		<p><img src="rampe.png" /></p>
+		<p><img src="rampe.png" alt="rampe image" /></p>
 		<div id="left"></div>
 		<div id="right"></div>
 	</header>
