--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 
 <head>
+
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>Ramped header</title>
 	
 	<style>
