Replace a p tag identifier by an ID attribut to make it more consistent.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			position: relative;
 		}
 		
-		header p{
+		#ramp{
 			text-align: center;
 			z-index: 1;
 		}
@@ -46,7 +46,7 @@
 
 <body>
 	<header>
-		<p><img src="rampe.png" alt="rampe image" /></p>
+		<p id="rampe" ><img src="rampe.png" alt="rampe image" /></p>
 		<div id="left"></div>
 		<div id="right"></div>
 	</header>
